plugins {
    id 'java'
    id 'application'
    id 'org.beryx.jlink' version '4.0.2'
    id 'com.diffplug.spotless' version '8.6.0'
}

group = 'turbowin'
version = '4.7'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.fazecast:jSerialComm:2.11.0'
    implementation 'org.eclipse.angus:smtp:2.0.3'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.assertj:assertj-swing-junit:3.17.1'
}

sourceSets {
    main {
        java {
            srcDirs += "$buildDir/generated/source/appinfo/java"
            srcDirs += "$buildDir/generated/source/emailsettings/java"
        }
    }
}

jar {
    manifest {
        attributes(
            'Main-Class': 'turbowin.main'
        )
    }
}

application {
    mainModule.set('turbowin')
    mainClass.set('turbowin.main')
}

jlink {
    launcher {
        name = 'turbowin'
    }
    options = ['--strip-debug', '--compress', 'zip-6', '--no-header-files', '--no-man-pages']
}

task generateAppInfoJava {
    doLast {
        def generatedSourceDir = file("$buildDir/generated/source/appinfo/java")
        generatedSourceDir.mkdirs()

        def javaFile = new File(generatedSourceDir, "TurboWinAppInfo.java")
        javaFile.text = """\
            package turbowin;
            // DO NOT EDIT - This file is generated by build.gradle
            public class TurboWinAppInfo {
                public static final String APPLICATION_VERSION = "${project.version} [${System.getProperty("sun.arch.data.model")}-bit] (build ${new Date().format('d-MMMM-yyyy')})";  // is tested for substring "[64-bit]" 
            }
        """
    }
}

task generateEmailSettingsJava {
    inputs.property("encryptionKey", System.getenv('TURBOWIN_EMAIL_ENCRYPTION_KEY'))
    inputs.property("characterEncoding", System.getenv('TURBOWIN_EMAIL_CHARACTER_ENCODING'))
    inputs.property("cipherTransformation", System.getenv('TURBOWIN_EMAIL_CIPHER_TRANSFORMATION'))
    inputs.property("aesEncryptionAlgorithm", System.getenv('TURBOWIN_EMAIL_AES_ENCRYPTION_ALGORITHM'))

    def generatedSourceDir = file("$buildDir/generated/source/emailsettings/java")
    outputs.dir(generatedSourceDir)

    doLast {
        def encryptionKey = inputs.properties.encryptionKey
        def characterEncoding = inputs.properties.characterEncoding
        def cipherTransformation = inputs.properties.cipherTransformation
        def aesEncryptionAlgorithm = inputs.properties.aesEncryptionAlgorithm

        if (encryptionKey == null || characterEncoding == null || cipherTransformation == null || aesEncryptionAlgorithm == null) {
            throw new GradleException("One or more TURBOWIN_EMAIL_* environment variables are not set.")
        }

        generatedSourceDir.mkdirs()

        def javaFile = new File(generatedSourceDir, "EmailSettingsConstants.java")

        javaFile.getParentFile().mkdirs()

        javaFile.text = """\
            package turbowin;
            // DO NOT EDIT - This file is generated by build.gradle
            public class EmailSettingsConstants {
                public static final String encryptionKey = "${encryptionKey}";
                public static final String characterEncoding = "${characterEncoding}";
                public static final String cipherTransformation = "${cipherTransformation}";
                public static final String aesEncryptionAlgorithm = "${aesEncryptionAlgorithm}";
            }
        """
    }
}

compileJava.dependsOn generateAppInfoJava, generateEmailSettingsJava

processResources.dependsOn generateAppInfoJava, generateEmailSettingsJava

tasks.jlink.doLast {
    copy {
        from('src/main/resources/turbowin/help_files')
        into file("$buildDir/image/help")
    }
}

task printVersion {
    doLast {
        println project.version
    }
}

test {
    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
}

spotless {
    java {
        target('src/**/*.java')

        googleJavaFormat()

        importOrder()
        removeUnusedImports()

        trimTrailingWhitespace()
        endWithNewline()
    }
}
